# nwg-common

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  sonar-project.properties
docs/superpowers/plans/: 2026-04-29-workspace-switcher.md
docs/superpowers/specs/: 2026-04-29-workspace-switcher-design.md
src/: error.rs  launch.rs  layer_shell.rs  lib.rs  pinning.rs  process.rs  signals.rs  singleton.rs
src/compositor/: hyprland.rs  mod.rs  null.rs  traits.rs  types.rs
src/compositor/sway/: events.rs  ipc.rs  mod.rs  tree.rs  types.rs
src/config/: css.rs  flags.rs  mod.rs  paths.rs
src/desktop/: categories.rs  dirs.rs  entry.rs  icons.rs  mod.rs  preferred_apps.rs
src/hyprland/: events.rs  ipc.rs  mod.rs  types.rs
