[package]
name = "nwg-common"
version = "0.4.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "Shared library for nwg-dock, nwg-drawer, and nwg-notifications — compositor-neutral IPC abstraction for Hyprland and Sway, .desktop parsing, CSS hot-reload, and related system plumbing."
readme = "README.md"
repository = "https://github.com/jasonherald/nwg-common"
keywords = ["hyprland", "sway", "wayland", "gtk4", "layer-shell"]
categories = ["gui", "config"]

[dependencies]
# GTK4 + Wayland layer shell
gtk4 = "0.10"
gtk4-layer-shell = "0.7"

# Serialization (Hyprland JSON IPC + sway i3-ipc)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
log = "0.4"

# CLI argument parsing (used by compositor::WmOverride's ValueEnum derive)
clap = { version = "4", features = ["derive"] }

# Shell-aware command splitting (POSIX quoting rules, used by launch + process)
shell-words = "1"

# Unix signals and process management
nix = { version = "0.31", features = ["signal", "process", "fs"] }
libc = "0.2"

# XDG directory resolution
dirs = "6"

# File watching (CSS hot-reload, pin-file inotify)
notify = "8"

[dev-dependencies]
serde_json = "1"
